@@ -2,14 +2,20 @@
  OmegaT 5.4.0
 ----------------------------------------------------------------------
   1 Enhancements
-  0 Bug fixes
+  1 Bug fixes
   0 Localisation updates
 ----------------------------------------------------------------------
 5.4.0 vs 5.3.0
 
   Implemented requests:
+
   - Sync file deletions from repository to project
   https://sourceforge.net/p/omegat/feature-requests/1499/
+
+  Bug fixes:
+
+  - cannot create new (teamp) project in empty repository
+  https://sourceforge.net/p/omegat/bugs/1005/
 
 ----------------------------------------------------------------------
  OmegaT 5.3.0 (2020-08-03)
